# Ragster

./: .gitignore  README.md
backend/: .env.example  README.md  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 2093dd456c99_add_rbac_models.py  791d42f946f9_add_document_content_and_filetype.py  8516e48bcf55_add_knowledge_base_and_document_tables.py  9bbc73e26175_modify_document_model_for_rbac_models.py  a155d1e82f7c_modify_user_model_for_rbac_models.py  c561d5bafbca_create_users_table.py  cab3b6d7f020_create_users_table1.py
backend/app/: config.py  db.py  main.py
backend/app/api/v1/: api.py
backend/app/api/v1/endpoints/: __init__.py  department.py  document.py  knowledge_base.py  permission.py  role.py  role_assignment.py  role_permission.py  user.py
backend/app/core/: config.py  deps.py  jwt.py  security.py
backend/app/crud/: department.py  user.py
backend/app/db/: session.py
backend/app/models/: __init__.py  department.py  knowledge_base.py  knowledge_base_user_role.py  permission.py  role.py  role_permission.py  user.py
backend/app/schemas/: department.py  document.py  knowledge_base.py  permission.py  role.py  role_assignment.py  role_permission.py  user.py  user_role.py
frontend/: landing-page.tsx  middleware.tsx  next.config.ts  package-lock.json  package.json
frontend/app/: layout.tsx  page.tsx
frontend/app/dashboard/: page.tsx
frontend/components/dashboard/: Dashboard.tsx  KnowledgeBaseList.tsx  PermissionList.tsx  RoleList.tsx  UserList.tsx
frontend/lib/: useLogin.ts  useUserRoles.ts
(+6 files in other folders)
